backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ingress-basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: mrityunjay0010/backend:latest
          ports:
            - containerPort: 3030

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ingress-basic
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 3030
